# ClampSuite

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README  README.md  env.yml  final_test_doct.py  pyproject.toml  pyprojet.toml  requirements.txt  requirements_dev.txt  script_example  script_example.ipynb  script_example.py  setup.py
.github/workflows/: develop.yml  main.yml  python-app.yml
clampsuite/: __init__.py  __main__.py  mainwindowtest
clampsuite/acq/: __init__.py  acq.py  acq_manager.py  acquisition.py  base_acq.py  current_clamp_acq.py  exp_manager.py  filter_acq.py  lfp_acq.py  mini_acq.py  oepsc_acq.py  postsynaptic_event.py
clampsuite/final_analysis/: __init__.py  final_analysis.py  final_current_clamp.py  final_evoked.py  final_mini_analysis.py
clampsuite/functions/: __init__.py  curve_fit.py  filtering_functions.py  kde.py  load_functions.py  psc_functions.py  rc_check.py  startup.py  template_psc.py  template_psp.py  utilities.py  utility_enums.py
clampsuite/gui_main/: ._filter_widget.py  acq_inspection.py  current_clamp_widget.py  filter_widget.py  main_window.py  mini_analysis_widget.py  oepsc_widget.py  pref_widget.py
clampsuite/gui_widgets/: __init__.py  acq_inspection.py  baseline.py  buttons.py  filter.py  load_acq.py  mini.py  palettes.py  qtwidgets.py  rc_check.py  test_widgets.py  utility_classes.py
clampsuite/gui_widgets/mini/: __init__.py  analysis.py  setup.py
clampsuite/load_analysis/: __init__.py  load_classes.py
clampsuite/manager/: __init__.py  exp_manager.py
clampy/: .___main__.py  __main__.py
clampy/acq/: ._acq_manager.py  acq.py  acq_manager.py  base_acq.py  current_clamp_acq.py  filter_acq.py  lfp_acq.py  mini_acq.py  oepsc_acq.py  postsynaptic_event.py
clampy/final_analysis/: __init__.py
clampy/functions/: __init__.py  curve_fit.py  filtering_functions.py  load_functions.py  utilities.py
clampy/gui_main/: acq_inspection.py  current_clamp_widget.py  filter_widget.py  main_window.py  mini_analysis_widget.py  oepsc_widget.py  pref_widget.py
clampy/gui_widgets/: qtwidgets.py
clampy/load_analysis/: load_classes.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  requirements.txt
docs/source/_static/: custom.css  switcher.json
docs/source/analysis_methods/: current_clamp_methods.rst  filtering.rst  index.rst  mini_methods.rst
docs/source/getting_started/: gui.rst  installation.rst
docs/source/modules/: current_clamp.rst  index.rst  mini_analysis.rst  oepsc_analysis.rst
ephysanalysis/: __main__.py
ephysanalysis/acq/: __init__.py  acq.py  base_acq.py  current_clamp_acq.py  filter_acq.py  lfp_acq.py  mini_acq.py  oepsc_acq.py  postsynaptic_event.py
ephysanalysis/base_acq/: acquisition_base.py  current_clamp_base.py  lfp_base.py  mini_acq_base.py  oepsc_base.py  postsynaptic_event_base.py
ephysanalysis/final_analysis/: final_current_clamp.py  final_evoked.py  final_mini_analysis.py
ephysanalysis/functions/: curve_fit.py  filtering_functions.py  kde.py  utilities.py
ephysanalysis/gui_main/: acq_inspection.py  current_clamp_widget.py  filter_widget.py  main_window.py  mini_analysis_widget.py  oepsc_widget.py  pref_widget.py
ephysanalysis/gui_widgets/: matplotlib_widgets.py  qtwidgets.py  test_widgets.py  utility_classes.py
ephysanalysis/load_acq/: load_acq.py
ephysanalysis/load_analysis/: load_classes.py
ephysanalysis/main_acq/: acquisition.py  current_clamp.py  lfp.py  mini_analysis.py  oepsc.py  postsynaptic_event.py
tests/: conftest.py  current_clamp_acq_test.py  exp_manager_test.py  filter_acq_test.py  lfp_acq_test.py  load_func_test.py  mini_acq_test.py  mini_test.py  oepsc_acq_test.py  test_utils.py
tests/functions/: filter_functions_test.py
(+57 files in other folders)
