[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clampsuite"
description = "Slice electrophysiology analysis package for analyzing mEPSCs, o/eEPSCs and current clamp data."
readme = "README.md"
authors = [{ name = "Lars Henrik Nelson", email = "larshnelson@protonmail.com" }]
dynamic = ["version"]
keywords = ["electrophysiology", "analysis"]
dependencies = [
    "bottleneck>=1.3.5",
    "KDEpy",
    "numpy>=1.23.3",
    "openpyxl>=3.0.10",
    "pandas>=1.4.4",
    "PyQt5>=5.15.7",
    "pyqtgraph>=0.13.1",
    "pyyaml>=6.0",
    "qdarkstyle>=3.0",
    "scipy>=1.9.1",
    "xlsxwriter>=3.0.3",
]
requires-python = ">=3.10"
license = {text = 'GNU General Public License v3 (GPLv3)'}

[project.optional-dependencies]
plotting = [
    "matplotlib",
]
data = [
    "h5py"
]

[project.urls]
Homepage = "https://github.com/LarsHenrikNelson/ClamPy"

[project.gui-scripts]
clampsuite = "clampsuite.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "clampsuite.__version__"}

