[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clampsuite"
description = "Slice electrophysiology analysis package for analyzing mEPSCs, o/eEPSCs and current clamp data."
readme = "README.md"
authors = [{ name = "Lars Henrik Nelson", email = "larshnelson@protonmail.com" }]
dynamic = ["version"]
keywords = ["electrophysiology", "analysis"]
dependencies = [
    "Bottleneck>=1.3.5",
    "KDEpy",
    "numpy>=1.23.3",
    "openpyxl>=3.0.10",
    "pandas>=1.4.4",
    "PySide6>=6.0",
    "pyqtgraph>=0.13.1",
    "pyyaml>=6.0",
    "scipy>=1.9.1",
    "xlsxwriter>=3.0.3",
]
requires-python = ">=3.10"
license = {file = "LICENSE"}

[project.optional-dependencies]
plotting = [
    "matplotlib",
]
data = [
    "h5py"
]
testing = [
    "pytest>=6.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "tox"
]

[project.urls]
Homepage = "https://github.com/LarsHenrikNelson/ClampSuite"
Documentation = "https://clampsuite.readthedocs.io/"

[project.gui-scripts]
clampsuite = "clampsuite.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "clampsuite.__version__"}

[tool.mypy]
mypy_path = "clampsuite"
check_untyped_defs = true
ignore_missing_imports = true
